platform/identity/mesh-base/peer-auth.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: identity-mtls
spec:
  mtls:
    mode: PERMISSIVE
