platform/identity/mesh-base/use-waypoint.yaml
apiVersion: v1
kind: Service
metadata:
  name: identity-backend
  labels:
    istio.io/use-waypoint: identity-waypoint
